fix: change gap in table

--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ table {
 
 td,
 th {
-    padding: 10px;
+    padding: 5px 2px 5px 0;
     border: 1px solid grey;
 }
 
